real-cks/2/q8/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messenger
  namespace: team-iris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messenger
      type: messenger
  template:
    metadata:
      labels:
        app: messenger
        type: messenger
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: messenger
  namespace: team-iris
spec:
  selector:
    app: messenger
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: team-iris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
      type: database
  template:
    metadata:
      labels:
        app: database
        type: database
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: team-iris
spec:
  selector:
    app: database
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmitter
  namespace: team-iris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmitter
      type: transmitter
  template:
    metadata:
      labels:
        app: transmitter
        type: transmitter
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: transmitter
  namespace: team-iris
spec:
  selector:
    app: transmitter
  ports:
    - port: 80
      targetPort: 80
